<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_create"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/nav_library"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_library" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_notifications" />
</menu>
